--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>groupId</groupId>
-    <artifactId>cs5223-assignment-1</artifactId>
+    <artifactId>csmcompproj</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
